--- a/index7.html
+++ b/index7.html
@@ -169,7 +169,7 @@
 
             <div id="earth_div" class="w3-container w3-block"></div>
         </div> 
-        <script src="v2/api.js"></script>
+        <script src="api.js"></script>
         <script>
             let earth, userLatitude, userLongitude, issMarker;
 
