--- a/space-astro.html
+++ b/space-astro.html
@@ -264,7 +264,7 @@
                 
                 <script>
                     async function fetchData() {
-                        const apiUrlAstronauts = "https://corsproxy.io/?https://ll.thespacedevs.com/2.2.0/astronaut/?in_space=true&type__id=&nationality=&date_of_birth=&date_of_birth__lt=&date_of_birth__lte=&date_of_death=&date_of_death__lt=&date_of_death__lte=&date_of_death__gt=&date_of_death__gte=&flights_count=&flights_count__lt=&flights_count__lte=&flights_count__gt=&flights_count__gte=&landings_count=&landings_count__lt=&landings_count__lte=&landings_count__gt=&landings_count__gte=&age=&age__lt=&age__lte=&age__gt=&age__gte=&is_human=true&has_flown=true&status_ids=&agency_ids=";
+                        const apiUrlAstronauts = "https://ll.thespacedevs.com/2.2.0/astronaut/?in_space=true&type__id=&nationality=&date_of_birth=&date_of_birth__lt=&date_of_birth__lte=&date_of_death=&date_of_death__lt=&date_of_death__lte=&date_of_death__gt=&date_of_death__gte=&flights_count=&flights_count__lt=&flights_count__lte=&flights_count__gt=&flights_count__gte=&landings_count=&landings_count__lt=&landings_count__lte=&landings_count__gt=&landings_count__gte=&age=&age__lt=&age__lte=&age__gt=&age__gte=&is_human=true&has_flown=true&status_ids=&agency_ids=";
                         
                         try {
 
