--- a/space-astro.html
+++ b/space-astro.html
@@ -241,7 +241,7 @@
 
             <div class="gtranslate_wrapper"></div>
             <script>window.gtranslateSettings = { "default_language": "en", "native_language_names": true, "wrapper_selector": ".gtranslate_wrapper", "flag_size": 16, "switcher_horizontal_position": "left", "switcher_vertical_position": "bottom", "flag_style": "3d" }</script>
-            <script src="https://cdn.gtranslate.net/widgets/latest/dwf.js" defer></script>
+            <script src="https://corsproxy.io/?https://cdn.gtranslate.net/widgets/latest/dwf.js" defer></script>
 
 
 
@@ -264,7 +264,7 @@
                 
                 <script>
                     async function fetchData() {
-                        const apiUrlAstronauts = "https://ll.thespacedevs.com/2.2.0/astronaut/?in_space=true&type__id=&nationality=&date_of_birth=&date_of_birth__lt=&date_of_birth__lte=&date_of_death=&date_of_death__lt=&date_of_death__lte=&date_of_death__gt=&date_of_death__gte=&flights_count=&flights_count__lt=&flights_count__lte=&flights_count__gt=&flights_count__gte=&landings_count=&landings_count__lt=&landings_count__lte=&landings_count__gt=&landings_count__gte=&age=&age__lt=&age__lte=&age__gt=&age__gte=&is_human=true&has_flown=true&status_ids=&agency_ids=";
+                        const apiUrlAstronauts = "https://corsproxy.io/?https://ll.thespacedevs.com/2.2.0/astronaut/?in_space=true&type__id=&nationality=&date_of_birth=&date_of_birth__lt=&date_of_birth__lte=&date_of_death=&date_of_death__lt=&date_of_death__lte=&date_of_death__gt=&date_of_death__gte=&flights_count=&flights_count__lt=&flights_count__lte=&flights_count__gt=&flights_count__gte=&landings_count=&landings_count__lt=&landings_count__lte=&landings_count__gt=&landings_count__gte=&age=&age__lt=&age__lte=&age__gt=&age__gte=&is_human=true&has_flown=true&status_ids=&agency_ids=";
                         
                         try {
 
