--- a/space-astro.html
+++ b/space-astro.html
@@ -195,7 +195,7 @@
         <link rel="stylesheet" href="./w3.css" type="text/css">
 
         <link rel="stylesheet" href="./space.css" type="text/css">
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+        <script type="text/javascript" src="https://corsproxy.io/?http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
 
         <!-- Use any element to open the sidenav -->
@@ -218,7 +218,7 @@
 
         </div>
 
-            <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            <script src="https://corsproxy.io/?https://code.jquery.com/jquery-3.2.1.min.js"
                 integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
             <script src="jquery.vidbacking.js" type="text/javascript"></script>
             <script type="text/javascript">
@@ -337,7 +337,7 @@
 </div>
 
 
-<script src="ztext.js"></script>
+
 
 <script>
     // Get the button
