--- a/space-astro.html
+++ b/space-astro.html
@@ -218,7 +218,7 @@
 
         </div>
 
-            <script src="https://corsproxy.io/?https://code.jquery.com/jquery-3.2.1.min.js"
+            <script src="https://code.jquery.com/jquery-3.2.1.min.js"
                 integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
             <script src="jquery.vidbacking.js" type="text/javascript"></script>
             <script type="text/javascript">
@@ -241,7 +241,7 @@
 
             <div class="gtranslate_wrapper"></div>
             <script>window.gtranslateSettings = { "default_language": "en", "native_language_names": true, "wrapper_selector": ".gtranslate_wrapper", "flag_size": 16, "switcher_horizontal_position": "left", "switcher_vertical_position": "bottom", "flag_style": "3d" }</script>
-            <script src="https://corsproxy.io/?https://cdn.gtranslate.net/widgets/latest/dwf.js" defer></script>
+            <script src="https://cdn.gtranslate.net/widgets/latest/dwf.js" defer></script>
 
 
 
