--- a/space-astro.html
+++ b/space-astro.html
@@ -195,7 +195,7 @@
         <link rel="stylesheet" href="w3.css" type="text/css">
 
         <link rel="stylesheet" href="space.css" type="text/css">
-        <script type="text/javascript" src="https://corsproxy.io/?http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
 
         <!-- Use any element to open the sidenav -->
