--- a/space-astro.html
+++ b/space-astro.html
@@ -192,9 +192,9 @@
             }
         </style>
 
-        <link rel="stylesheet" href="w3.css" type="text/css">
+        <link rel="stylesheet" href="./w3.css" type="text/css">
 
-        <link rel="stylesheet" href="space.css" type="text/css">
+        <link rel="stylesheet" href="./space.css" type="text/css">
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
 
@@ -337,7 +337,7 @@
 </div>
 
 
-
+<script src="ztext.js"></script>
 
 <script>
     // Get the button
