--- a/space-astro.html
+++ b/space-astro.html
@@ -192,13 +192,11 @@
             }
         </style>
 
-        <link rel="stylesheet" href="./w3.css" type="text/css">
+        <link rel="stylesheet" href="w3.css" type="text/css">
 
-        <link rel="stylesheet" href="./space.css" type="text/css">
+        <link rel="stylesheet" href="space.css" type="text/css">
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
-
-        <!-- Use any element to open the sidenav -->
 
         <link rel="stylesheet" href="jquery.vidbacking.css" type="text/css">
 
@@ -242,8 +240,7 @@
         <button onclick="topFunction()" id="myBtn" title="Go to top" class="fa fa-chevron-circle-up"></button>
 
 
-        <div id="main">
-
+  
             <video poster="starryNight2.jpeg" autoplay muted loop class="vidbacking">
                 <source src="spacevid.mp4" type="video/mp4">
                 <source src="spacevid.webm" type="video/webm">
@@ -347,7 +344,7 @@
 </div>
 
 
-
+        </div>
 
 <script>
     // Get the button
