--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -190,8 +190,7 @@
             href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Caveat+Brush&family=Homemade+Apple&family=Orbitron:wght@600;700&display=swap"
             rel="stylesheet">
 
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+       
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
@@ -204,12 +203,10 @@
 
         <title>SPACE INFOS index</title>
 
-        <link rel="stylesheet" href="./w3.css" type="text/css">
+        <link rel="stylesheet" href="w3.css" type="text/css">
 
-        <link rel="stylesheet" href="./space.css" type="text/css">
-        <link rel="stylesheet"
-            href="jquery.vidbacking.css"
-            type="text/css">
+        <link rel="stylesheet" href="space.css" type="text/css">
+     
 
 
 
@@ -269,7 +266,7 @@
 
                 <script>
                     async function fetchData() {
-                        const apiUrl = "https://corsproxy.org/?https://exoplanethunter.com/api/Statistics";
+                        const apiUrl = "https://corsproxy.io/?https://exoplanethunter.com/api/Statistics";
 
                         try {
                             const response = await fetch(apiUrl);
