--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 }
 
                 // Add a new marker for the ISS
-                issMarker = WE.marker([data.latitude, data.longitude],'https://space-info.free.nf/iss3.png',80,50).addTo(earth);
+                issMarker = WE.marker([data.latitude, data.longitude],'iss3.png',80,50).addTo(earth);
                 issMarker.bindPopup(popupContent, { maxWidth: 145, closeButton: true }).openPopup();
             }
 
