--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -266,7 +266,7 @@
 
                 <script>
                     async function fetchData() {
-                        const apiUrl = "https://corsproxy.io/?https://exoplanethunter.com/api/Statistics";
+                       const apiUrl = "https://cors-anywhere.herokuapp.com/https://exoplanethunter.com/api/Statistics";
 
                         try {
                             const response = await fetch(apiUrl);
