--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -223,7 +223,7 @@
     <body>
 
         <!-- Navigation (Stays on Top) -->
-           <div id="w3-menu-container" class="w3-bar w3-center">
+          <div id="w3-menu-container" class="w3-bar w3-center w3-transparent ">
             <!-- Your W3.CSS sidenav goes here -->          
            
             <a href="index.html" class="w3-button"><img src="iss4.png" height="40px" width="30px"></img></a>
@@ -265,7 +265,7 @@
 
 <script>
                async function fetchData() {
-    const apiUrl = "https://exoplanethunter.com/api/Statistics";
+    const apiUrl = "https://corsproxy.io/?https://exoplanethunter.com/api/Statistics";
 
     try {
         const response = await fetch(apiUrl);
