--- a/lancements.html
+++ b/lancements.html
@@ -228,7 +228,7 @@
   
   <body>  
       <button onclick="topFunction()" id="myBtn" title="Go to top"  class="fa fa-chevron-circle-up"></button>
-         <div id="w3-menu-container" class="w3-bar w3-center">
+         <div id="w3-menu-container" class="w3-bar w3-center w3-transparent ">
             <!-- Your W3.CSS sidenav goes here -->   
             <a href="index.html" class="w3-button"><img src="iss4.png" height="50px" width="40px"></img></a>
             <a href="space-astro.html" class="w3-button"><img src="cosmo.png" height="50px" width="40px"></img></span></a>
