--- a/apod.html
+++ b/apod.html
@@ -222,7 +222,7 @@
   <body>
 
     <!-- Navigation (Stays on Top) -->
-       <div id="w3-menu-container" class="w3-bar w3-center">
+      <div id="w3-menu-container" class="w3-bar w3-center w3-transparent ">
             <!-- Your W3.CSS sidenav goes here -->          
             
             <a href="index.html" class="w3-button"><img src="iss4.png" height="40px" width="30px"></img></a>
