--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -264,37 +264,44 @@
 
 
 <script>
-               async function fetchData() {
+              async function fetchData() {
     const apiUrl = "https://corsproxy.io/?https://exoplanethunter.com/api/Statistics";
 
     try {
         const response = await fetch(apiUrl);
+        const contentType = response.headers.get('Content-Type');
 
-        // Log the raw response to check for issues
+        // Log the raw response and content type
         const responseText = await response.text();
-        console.log(responseText);
+        console.log("Response Text:", responseText);
+        console.log("Content-Type:", contentType);
 
         if (!response.ok) {
             throw new Error(`HTTP error! Status: ${response.status}`);
         }
 
-        const data = JSON.parse(responseText); // Ensure valid JSON parsing
+        // Check if the response is JSON
+        if (contentType && contentType.includes('application/json')) {
+            const data = JSON.parse(responseText);  // Ensure valid JSON parsing
 
-        const statisticsContainer = document.getElementById("statisticsData");
-        statisticsContainer.innerHTML = `
-            <div class="w3-row w3-auto w3-container w3-sand w3-animate-zoom artout trans test">
-                <p><h2>Exoplanetes confirmees:</h2></p>
-                <p class="test5 w3-center" id="text">${data.confirmedPlanets}</p>
-            </div>
-            <div class="w3-row w3-auto w3-container w3-sand w3-animate-zoom artout trans test">
-                <p><h2>Planetes Habitables confirmees:</h2></p>
-                <p class="test5 w3-center" id="text">${data.confirmedHabitablePlanets}</p>
-            </div>
-            <div class="w3-row w3-auto w3-container w3-sand w3-animate-zoom artout trans test">
-                <p><h2>Lunes habitables:</h2></p>
-                <p class="test5 w3-center" id="text">${data.possibleHabitableMoons}</p>
-            </div>
-        `;
+            const statisticsContainer = document.getElementById("statisticsData");
+            statisticsContainer.innerHTML = `
+                <div class="w3-row w3-auto w3-container w3-sand w3-animate-zoom artout trans test">
+                    <p><h2>Exoplanetes confirmees:</h2></p>
+                    <p class="test5 w3-center" id="text">${data.confirmedPlanets}</p>
+                </div>
+                <div class="w3-row w3-auto w3-container w3-sand w3-animate-zoom artout trans test">
+                    <p><h2>Planetes Habitables confirmees:</h2></p>
+                    <p class="test5 w3-center" id="text">${data.confirmedHabitablePlanets}</p>
+                </div>
+                <div class="w3-row w3-auto w3-container w3-sand w3-animate-zoom artout trans test">
+                    <p><h2>Lunes habitables:</h2></p>
+                    <p class="test5 w3-center" id="text">${data.possibleHabitableMoons}</p>
+                </div>
+            `;
+        } else {
+            throw new Error('Response is not JSON or failed to fetch.');
+        }
     } catch (error) {
         console.error(error);
         document.getElementById("statisticsData").innerHTML = `
