--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -265,7 +265,7 @@
 
 <script>
               async function fetchData() {
-    const apiUrl = "https://thingproxy.freeboard.io/fetch/https://exoplanethunter.com/api/Statistics";
+    const apiUrl = "https://api.allorigins.win/get?url=https://exoplanethunter.com/api/Statistics";
 
     try {
         const response = await fetch(apiUrl);
