--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -306,34 +306,42 @@ fetchData();
 </script>
                 
                 <script>
-                    async function fetchData() {
-                        const apiUrl = "https://corsproxy.io/?https://exoplanethunter.com/api/Chart/PlanetTypes?type=0";
+               async function fetchData() {
+    const apiUrl = "https://corsproxy.io/?https://exoplanethunter.com/api/Chart/PlanetTypes?type=0";
 
-                        try {
-                            const typeresponse = await fetch(apiUrl);
-                            const typedata = await typeresponse.json();
+    try {
+        const typeresponse = await fetch(apiUrl);
+        const typedata = await typeresponse.json();
 
-                            const typeList = document.createElement('ul');
-                            typedata.forEach(data => { // Change 'typedata.results' to 'typedata'
-                                const typeItem = document.createElement('div');
-                                typeItem.innerHTML = `
-                                <br>
-                                <div class="w3-mobile w3-row w3-auto w3-center"><p class=" w3-animate-zoom w3-center w3-container   w3-sand   artout trans"> <a class="test "><u> ${data.title} </u></a><br><a class=" w3-center w3-text-red test5"> ${data.value}</a></p></div>
-                                `;
+        // Debugging: Check the received data
+        console.log("Planet Type Data:", typedata);
 
-                                typeList.appendChild(typeItem);
-                            });
+        const typeList = document.createElement('ul');
+        typedata.forEach(data => {
+            const typeItem = document.createElement('div');
+            typeItem.innerHTML = `
+                <br>
+                <div class="w3-mobile w3-row w3-auto w3-center">
+                    <p class="w3-animate-zoom w3-center w3-container w3-sand artout trans"> 
+                        <a class="test"><u> ${data.title} </u></a><br>
+                        <a class="w3-center w3-text-red test5"> ${data.value}</a>
+                    </p>
+                </div>
+            `; 
 
-                            const dataContainer = document.getElementById("data");
-                            dataContainer.innerHTML = '';
-                            dataContainer.appendChild(typeList);
-                        } catch (error) {
-                            console.error(error);
-                            document.getElementById("data").innerHTML = "Failed to fetch data.";
-                        }
-                    }
+            typeList.appendChild(typeItem);
+        });
 
-                    fetchData();
+        const dataContainer = document.getElementById("data");
+        dataContainer.innerHTML = ''; // Clear old data
+        dataContainer.appendChild(typeList);
+    } catch (error) {
+        console.error("Error fetching planet type data:", error);
+        document.getElementById("data").innerHTML = "<p class='w3-text-red'>Failed to fetch data.</p>";
+    }
+}
+
+fetchData();
                 </script>
 
                 <div id="data">
