--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -53,6 +53,16 @@
                 width: 80%;
                 max-width: 700px;
             }
+            #w3-menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; /* Ensures it stays above other elements */
+  background-color: rgba(0, 0, 0, 0.8); /* Adjust transparency */
+  padding: 10px 0;
+}
+
 
             /* Caption of Modal Image */
             #caption {
