--- a/lancements.html
+++ b/lancements.html
@@ -192,6 +192,14 @@
 #myBtn:hover {
   background-color: #555;
 }
+      #w3-menu-container {
+			position: fixed;
+			top: 0;
+			width: 100%;
+			background-color: #333;
+			z-index: 1000;
+
+		}
     </style>
 
     <link rel="stylesheet" href="./space.css" type="text/css">
