--- a/apod.html
+++ b/apod.html
@@ -197,6 +197,14 @@
     width: 100%;
   }
 }
+	    #w3-menu-container {
+			position: fixed;
+			top: 0;
+			width: 100%;
+			background-color: #333;
+			z-index: 1000;
+
+		}
     </style>
 
 
