--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -208,7 +208,7 @@
         .glow-number {
             font-size: 2.5em;
             font-weight: bold;
-            color: cyan;
+            color: white;
             text-shadow: 0 0 15px cyan, 0 0 30px blue;
             animation: glow-pulse 1.5s infinite alternate ease-in-out;
         }
