--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -127,7 +127,7 @@
                 font-family: 'Orbitron', sans-serif;
                 font-size: xx-large;
                 text-decoration: underline;
-                color: rgb(4, 4, 61);
+                color: white;
             }
 
 
@@ -208,7 +208,7 @@
         .glow-number {
             font-size: 2.5em;
             font-weight: bold;
-            color: white;
+            color: cyan;
             text-shadow: 0 0 15px cyan, 0 0 30px blue;
             animation: glow-pulse 1.5s infinite alternate ease-in-out;
         }
