--- a/space-astro.html
+++ b/space-astro.html
@@ -107,15 +107,16 @@
                 box-shadow: 0 0 30px var(--glow-color);
             }
 
-            .astronaut-image {
-                width: 250px;
-                height: 250px;
-                border-radius: 2%;
-                border: 2px solid var(--glow-color);
-                box-shadow: 0 0 20px var(--glow-color);
-                position: relative;
-                transition: transform 0.5s ease;
-            }
+         .astronaut-image {
+    width: 100%;
+    max-width: 250px; /* Adjust as needed */
+    height: auto;
+    border-radius: 2%;
+    border: 2px solid var(--glow-color);
+    box-shadow: 0 0 20px var(--glow-color);
+    position: relative;
+    transition: transform 0.5s ease;
+}
 
             .astronaut-image::after {
                 content: "";
