--- a/space-astro.html
+++ b/space-astro.html
@@ -339,34 +339,32 @@
 
             <script>
                 async function fetchData() {
-                    const apiUrl = "https://corsproxy.io/?https://ll.thespacedevs.com/2.2.0/astronaut/?in_space=true&type__id=&nationality=&date_of_birth=&date_of_birth__lt=&date_of_birth__lte=&date_of_death=&date_of_death__lt=&date_of_death__lte=&date_of_death__gt=&date_of_death__gte=&flights_count=&flights_count__lt=&flights_count__lte=&flights_count__gt=&flights_count__gte=&landings_count=&landings_count__lt=&landings_count__lte=&landings_count__gt=&landings_count__gte=&age=&age__lt=&age__lte=&age__gt=&age__gte=&is_human=true&has_flown=true&status_ids=&agency_ids=";
-                    try {
-                        const response = await fetch(apiUrl);
-                        const data = await response.json();
-                        const container = document.getElementById("astronautsData");
+    const apiUrl = "https://corsproxy.io/?https://ll.thespacedevs.com/2.2.0/astronaut/?in_space=true&type__id=&nationality=&date_of_birth=&date_of_birth__lt=&date_of_birth__lte=&date_of_birth__gt=&date_of_birth__gte=&profile_image=&profile_image__isnull=&bio=&bio__isnull=";
+    try {
+        const response = await fetch(apiUrl);
+        const data = await response.json();
+        const container = document.getElementById("astronautsData");
 
-                        let count = data.count;
-                        container.innerHTML = "";
+        let count = data.count;
+        container.innerHTML = "";
 
-                        data.results.forEach(astronaut => {
-                            const card = document.createElement("div");
-                            card.classList.add("astronaut-card");
+        data.results.forEach(astronaut => {
+            const card = document.createElement("div");
+            card.classList.add("astronaut-card");
 
-                             // Format the first flight date
-                const firstFlightDate = new Date(astronaut.first_flight);
-                const formattedFirstFlight = firstFlightDate.toLocaleDateString('fr-FR', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+            // Format the first flight date
+            const firstFlightDate = new Date(astronaut.first_flight);
+            const formattedFirstFlight = firstFlightDate.toLocaleDateString('fr-FR', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
 
-                // Format the time in space
-const totalMinutes = parseInt(astronaut.time_in_space, 10);
-if (!isNaN(totalMinutes)) {
-    const days = Math.floor(totalMinutes / (24 * 60));
-    const hours = Math.floor((totalMinutes % (24 * 60)) / 60);
-    const minutes = totalMinutes % 60;
-    const formattedTimeInSpace = `${days} jours ${hours} heures ${minutes} minutes`;
-} else {
-    const formattedTimeInSpace = "N/A";
-}
-
+            // Format the time in space
+            let formattedTimeInSpace = "N/A";
+            const totalMinutes = parseInt(astronaut.time_in_space, 10);
+            if (!isNaN(totalMinutes)) {
+                const days = Math.floor(totalMinutes / (24 * 60));
+                const hours = Math.floor((totalMinutes % (24 * 60)) / 60);
+                const minutes = totalMinutes % 60;
+                formattedTimeInSpace = `${days} jours ${hours} heures ${minutes} minutes`;
+            }
                
                             card.innerHTML = `
                        
