--- a/space-astro.html
+++ b/space-astro.html
@@ -361,7 +361,7 @@
 
             // Format the time in space
             let formattedTimeInSpace = "N/A";
-            const totalMinutes = parseInt(astronaut.time_in_space, 10);
+            const totalMinutes = parseInt(astronaut.time_in_space.replace(' minutes', ''), 10);
             if (!isNaN(totalMinutes)) {
                 const days = Math.floor(totalMinutes / (24 * 60));
                 const hours = Math.floor((totalMinutes % (24 * 60)) / 60);
